@@ -239,6 +239,7 @@ fi
 AC_REPLACE_FUNCS([setproctitle])
 AC_CHECK_FUNCS([setproctitle_init])
 # Other functions
+AC_SEARCH_LIBS([clock_gettime], [rt])
 AC_REPLACE_FUNCS([strlcpy
                   strnlen
                   strndup
@@ -246,7 +247,8 @@ AC_REPLACE_FUNCS([strlcpy
                   getline
                   asprintf
                   vsyslog
-                  daemon])
+                  daemon
+                  clock_gettime])
 # Optional functions
 AC_CHECK_FUNCS([setresuid setresgid])
 
