@@ -9,8 +9,9 @@ libcommon_daemon_lib_la_SOURCES = \
 	log.c log.h version.c \
 	marshal.c marshal.h \
 	ctl.c ctl.h \
+	now.c now.h \
 	lldpd-structs.c lldpd-structs.h lldp-const.h
 libcommon_daemon_lib_la_LIBADD  = compat/libcompat.la
 
-libcommon_daemon_client_la_SOURCES = log.c log.h version.c lldp-const.h
+libcommon_daemon_client_la_SOURCES = log.c log.h now.c now.h version.c lldp-const.h
 libcommon_daemon_client_la_LIBADD  = compat/libcompat.la
