@@ -775,7 +775,7 @@ levent_schedule_cleanup(struct lldpd *cfg)
 
 	/* Compute the next TTL event */
 	struct timeval tv = { cfg->g_config.c_ttl, 0 };
-	time_t now = time(NULL);
+	time_t now = monotonic_now();
 	time_t next;
 	struct lldpd_hardware *hardware;
 	struct lldpd_port *port;
